kubernetes/apps/network/traefik/addons/external-services/flint3.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flint3
  namespace: network
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: "https"
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443

---
apiVersion: v1
kind: Endpoints
metadata:
  name: flint3
  namespace: network
subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - name: https
        port: 443
        protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flint3
  namespace: network
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "network-chain-no-auth-restrict-networks@kubernetescrd"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Flint3
    gethomepage.dev/group: Server
    gethomepage.dev/icon: flint3.png
    gethomepage.dev/description: GL.iNet Router
    gethomepage.dev/href: https://router.${SECRET_DOMAIN}
spec:
  ingressClassName: traefik-internal
  rules:
    - host: &host "router.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flint3
                port:
                  number: 443
  tls:
    - hosts:
        - *host
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
