kubernetes/apps/network/traefik/addons/external-services/plex-ext.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ext
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "network-chain-no-auth@kubernetescrd"
spec:
  ingressClassName: traefik-internal
  rules:
    - host: &host "plex-ext.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: plex-ext
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Service
metadata:
  name: plex-ext
  annotations:
    teleport.dev/name: plex
  labels:
    teleport: enabled
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex-ext
subsets:
  - addresses:
      - ip: ${SECRET_PLEX_SERVER}
    ports:
      - name: http
        port: 42400
        protocol: TCP
