kubernetes/apps/network/traefik/addons/external-services/proxmox.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pve-ext
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "network-chain-no-auth-restrict-networks@kubernetescrd"
    hajimari.io/enable: "true"
    hajimari.io/icon: "simple-icons:proxmox"
    hajimari.io/appName: "Proxmox"
    hajimari.io/group: "system"
spec:
  ingressClassName: traefik-internal
  rules:
    - host: &host "pve.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: pve-ext
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: pve-production-tls
---
apiVersion: v1
kind: Service
metadata:
  name: pve-ext
spec:
  ports:
    - name: http
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pve-ext
subsets:
  - addresses:
      - ip: 192.168.1.21
    ports:
      - name: http
        port: 8006
        protocol: TCP
