kubernetes/apps/network/traefik/addons/external-services/truenas.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: network
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: "https"
spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443

---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
  namespace: network
subsets:
  - addresses:
      - ip: 192.168.1.2
    ports:
      - name: https
        port: 443
        protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas
  namespace: network
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "network-chain-external-services-no-auth-restrict-networks@kubernetescrd"
    traefik.ingress.kubernetes.io/service.serverstransport: "network-truenas-transport@kubernetescrd"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: TrueNAS
    gethomepage.dev/group: Server
    gethomepage.dev/icon: truenas.png
    gethomepage.dev/description: Storage Machine
    gethomepage.dev/href: https://truenas.${SECRET_DOMAIN}
    gethomepage.dev/siteMonitor: https://192.168.1.2
    gethomepage.dev/pod-selector: ""
    # gethomepage.dev/ping: "true"
    # gethomepage.dev/statusStyle: dot
spec:
  ingressClassName: traefik-internal
  rules:
    - host: &host "truenas.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas
                port:
                  number: 443
  tls:
    - hosts:
        - *host
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
